--- a/trans_gold/home.html
+++ b/trans_gold/home.html
@@ -51,13 +51,13 @@
 						</div>
 						<button type="button" class="body-main__button button">Подзвонити</button>
 						<div class="main__social social-main">
-							<a class="social-main__icon" href="#">
+							<a class="social-main__icon" href="tel:+380994180888">
 								<picture><source srcset="img/social/viber.webp" type="image/webp"><img src="img/social/viber.png" alt="viber"></picture>
 							</a>
-							<a class="social-main__icon" href="#">
+							<a class="social-main__icon" href="tel:+380958954122">
 								<picture><source srcset="img/social/telegram.webp" type="image/webp"><img src="img/social/telegram.png" alt="telegram"></picture>
 							</a>
-							<a class="social-main__icon" href="#">
+							<a class="social-main__icon" href="tel:380502413088">
 								<picture><source srcset="img/social/whatsapp.webp" type="image/webp"><img src="img/social/whatsapp.png" alt="whatsapp"></picture>
 							</a>
 						</div>
@@ -538,22 +538,22 @@
 						</div>
 					</div>
 					<div class="contacts__social social-contacts">
-						<a href="#" class="social-contacts__image-ibg">
+						<a href="tel:0994180888" class="social-contacts__image-ibg">
 							<picture><source data-srcset="img/social/viber.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/social/viber.png" alt="viber"></picture>
 						</a>
-						<a href="#" class="social-contacts__image-ibg">
+						<a href="tel:380502413088" class="social-contacts__image-ibg">
 							<picture><source data-srcset="img/social/whatsapp.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/social/whatsapp.png" alt="whatsapp"></picture>
 						</a>
-						<a href="#" class="social-contacts__image-ibg">
+						<a href="tel:+380958954122" class="social-contacts__image-ibg">
 							<picture><source data-srcset="img/social/telegram.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/social/telegram.png" alt="telegram"></picture>
 						</a>
-						<a href="#" class="social-contacts__image-ibg">
+						<a target="_blank" href="https://vm.tiktok.com/ZM2fQJNjD/" class="social-contacts__image-ibg">
 							<picture><source data-srcset="img/social/tiktok.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/social/tiktok.png" alt="tiktok"></picture>
 						</a>
-						<a href="#" class="social-contacts__image-ibg">
+						<a target="_blank" href="https://www.facebook.com/profile.php?id=100092974507367" class="social-contacts__image-ibg">
 							<picture><source data-srcset="img/social/fb.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/social/fb.png" alt="fb"></picture>
 						</a>
-						<a href="#" class="social-contacts__image-ibg social-contacts__image-ibg--radius">
+						<a href="mailto:TransGold.transfer@gmail.com" class="social-contacts__image-ibg social-contacts__image-ibg--radius">
 							<picture><source data-srcset="img/social/gmail.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/social/gmail.png" alt="gmail"></picture>
 						</a>
 					</div>
