--- a/aspidpartners/advertiser.html
+++ b/aspidpartners/advertiser.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250327142531">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -162,8 +162,8 @@
 						<div class="traffic__top-block top-block">
 							<h2 class="top-block__title top-block__title--color">Traffic Types</h2>
 						</div>
-						<div data-showmore="items" class="traffic__items">
-							<div data-showmore-content="2" class="traffic__content">
+						<div data-showmore class="traffic__items">
+							<div data-showmore-content class="traffic__content">
 								<article class="traffic__card card-traffic card-traffic--main">
 									<img class="card-traffic__image ibg" src="img/advertiser/traffic/search.webp" alt="Image">
 									<h4 class="card-traffic__title">Search</h4>
@@ -684,7 +684,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250327142531"></script>
+	<script src="js/app.min.js?_v=20250328212200"></script>
 </body>
 
 </html>
