--- a/aspidpartners/e-commerce.html
+++ b/aspidpartners/e-commerce.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250327142531">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,7 +94,7 @@
 		</header>
 		<main class="page">
 			<section class="page__hero hero hero--commerce">
-				<img class="hero__image ibg" src="img/home/hero/bg.webp" alt="Image">
+				<img class="hero__image ibg" src="img/e-commerce/hero/bg.webp" alt="Image">
 				<div class="hero__container">
 					<div class="hero__section-block section-block section-block--hero">
 						<div class="section-block__breadcrumb breadcrumb-section-block">
@@ -378,7 +378,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250327142531"></script>
+	<script src="js/app.min.js?_v=20250328212200"></script>
 </body>
 
 </html>
