--- a/aspidpartners/home.html
+++ b/aspidpartners/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250327142531">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -407,8 +407,104 @@
 						<div class="partners__image">
 							<img src="img/home/partners/poopeys.webp" alt="Image">
 						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/temu.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/walmart.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/morrisons.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/poopeys.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/temu.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/walmart.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/morrisons.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/poopeys.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/temu.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/walmart.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/morrisons.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/poopeys.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/temu.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/walmart.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/morrisons.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/poopeys.webp" alt="Image">
+						</div>
 					</div>
 					<div class="partners__row partners__row--2">
+						<div class="partners__image">
+							<img src="img/home/partners/tesco.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/morrisons.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/aliexpress.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/tesco.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/walmart.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/poopeys.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/tesco.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/morrisons.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/aliexpress.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/tesco.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/walmart.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/poopeys.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/aliexpress.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/tesco.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/walmart.webp" alt="Image">
+						</div>
+						<div class="partners__image">
+							<img src="img/home/partners/poopeys.webp" alt="Image">
+						</div>
 						<div class="partners__image">
 							<img src="img/home/partners/tesco.webp" alt="Image">
 						</div>
@@ -747,7 +843,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20250327142531"></script>
+	<script src="js/app.min.js?_v=20250328212200"></script>
 </body>
 
 </html>
