--- a/aspidpartners/login.html
+++ b/aspidpartners/login.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331001140">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,62 +22,62 @@
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Advertiser</a>
+								<a href="../advertiser.html" class="menu__link _icon-arrow-down">Advertiser</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Advertiser</a>
+											<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Affiliate</a>
+								<a href="../affiliate.html" class="menu__link _icon-arrow-down">Affiliate</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Affiliate</a>
+											<a class="sub-menu__link" href="#">PayPerCall</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">E-commerce</a>
+								<a href="../e-commerce.html" class="menu__link">E-commerce</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Lead Generation</a>
+								<a href="../lead-generation.html" class="menu__link">Lead Generation</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Company </a>
+								<a href="../company.html" class="menu__link">Company</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Blog </a>
+								<a href="../blog.html" class="menu__link">Blog</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">FAQ</a>
+								<a href="../faq.html" class="menu__link">FAQ</a>
 							</li>
 						</ul>
 					</nav>
 				</div>
 				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--login">Log In</a>
+						<a href="../login.html" class="actions-header__button button button--login">Log In</a>
 						<div class="actions-header__sub-menu actions-header__sub-menu--login sub-menu sub-menu--login">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
 									<a class="sub-menu__link" href="#">CPA Network</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Affiliate</a>
+									<a class="sub-menu__link" href="../affiliate.html">Affiliate</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Advertiser</a>
+									<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--sign-up">Sign Up</a>
+						<a href="../login.html" class="actions-header__button button button--sign-up">Sign Up</a>
 						<div class="actions-header__sub-menu sub-menu">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
@@ -110,11 +110,11 @@
 								<div class="form-login__content">
 									<div class="form-login__line">
 										<div class="form-login__item">
-											<label for="i-11" class="form-login__label">First Name*</label>
+											<label for="i-11" class="form-login__label">Your Name *</label>
 											<input id="i-11" placeholder="Name" type="text" name="form[]" data-error="Error message" data-required="name" class="form-login__input">
 										</div>
 										<div class="form-login__item">
-											<label for="i-12" class="form-login__label">Email Address*</label>
+											<label for="i-12" class="form-login__label">Email Address *</label>
 											<input id="i-12" placeholder="Email" type="text" name="form[email]" data-error="Error message" data-required="email" class="form-login__input">
 										</div>
 									</div>
@@ -164,16 +164,16 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">E-commerce</a>
+									<a href="../e-commerce.html" class="spollers-footer__link">E-commerce</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Lead Generation</a>
+									<a href="../lead-generation.html" class="spollers-footer__link">Lead Generation</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Company</a>
+									<a href="../company.html" class="spollers-footer__link">Company</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Blog</a>
+									<a href="../blog.html" class="spollers-footer__link">Blog</a>
 								</li>
 							</ul>
 						</div>
@@ -183,10 +183,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Loyalty program</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Loyalty program</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">PayPerCall</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">PayPerCall</a>
 								</li>
 							</ul>
 						</div>
@@ -196,10 +196,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Publisher Terms and Conditions</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Publisher Terms and Conditions</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Privacy Policy</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Privacy Policy</a>
 								</li>
 							</ul>
 						</div>
@@ -208,7 +208,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250328212200"></script>
+	<script src="js/app.min.js?_v=20250331001140"></script>
 </body>
 
 </html>
