--- a/aspidpartners/advertiser.html
+++ b/aspidpartners/advertiser.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331001140">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,62 +22,62 @@
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Advertiser</a>
+								<a href="../advertiser.html" class="menu__link _icon-arrow-down">Advertiser</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Advertiser</a>
+											<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Affiliate</a>
+								<a href="../affiliate.html" class="menu__link _icon-arrow-down">Affiliate</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Affiliate</a>
+											<a class="sub-menu__link" href="#">PayPerCall</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">E-commerce</a>
+								<a href="../e-commerce.html" class="menu__link">E-commerce</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Lead Generation</a>
+								<a href="../lead-generation.html" class="menu__link">Lead Generation</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Company </a>
+								<a href="../company.html" class="menu__link">Company</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Blog </a>
+								<a href="../blog.html" class="menu__link">Blog</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">FAQ</a>
+								<a href="../faq.html" class="menu__link">FAQ</a>
 							</li>
 						</ul>
 					</nav>
 				</div>
 				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--login">Log In</a>
+						<a href="../login.html" class="actions-header__button button button--login">Log In</a>
 						<div class="actions-header__sub-menu actions-header__sub-menu--login sub-menu sub-menu--login">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
 									<a class="sub-menu__link" href="#">CPA Network</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Affiliate</a>
+									<a class="sub-menu__link" href="../affiliate.html">Affiliate</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Advertiser</a>
+									<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--sign-up">Sign Up</a>
+						<a href="../login.html" class="actions-header__button button button--sign-up">Sign Up</a>
 						<div class="actions-header__sub-menu sub-menu">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
@@ -102,10 +102,10 @@
 								<nav class="menu-breadcrumb__body">
 									<ul class="menu-breadcrumb__list">
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Home</a>
+											<a href="home.html" class="menu-breadcrumb__link active">Home</a>
 										</li>
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Advertisers</a>
+											<a href="advertiser.html" class="menu-breadcrumb__link active">Advertisers</a>
 										</li>
 									</ul>
 								</nav>
@@ -130,13 +130,13 @@
 									<div class="actions-section-block__text _icon-line-end-circle">Traffic in over 50 countries</div>
 								</div>
 							</div>
-							<a href="#" class="actions-section-block__button button button--hero">Join</a>
+							<a href="registration-1.html" class="actions-section-block__button button button--hero">Join</a>
 						</div>
 
 					</div>
 				</div>
 			</section>
-			<div class="page__counters counters">
+			<div class="page__counters counters counters--commerce">
 				<div class="counters__container">
 					<div class="counters__items items-counters">
 						<div class="items-counters__value">770 000+</div>
@@ -149,10 +149,6 @@
 					<div class="counters__items items-counters">
 						<div class="items-counters__value">$1.5B+</div>
 						<div class="items-counters__description">Made revenue ADVERTISER</div>
-					</div>
-					<div class="counters__items items-counters">
-						<div class="items-counters__value">770 000+</div>
-						<div class="items-counters__description">Affiliat worldwide work with us</div>
 					</div>
 				</div>
 			</div>
@@ -536,21 +532,21 @@
 					</div>
 					<div class="work-block__items">
 						<div class="work-block__card card-work-block">
-							<div class="card-work-block__image">
+							<div class="card-work-block__image card-work-block__image--advertiser">
 								<img src="img/advertiser/work/01.webp" alt="Image">
 							</div>
 							<div class="card-work-block__step">Step 1: Affiliate</div>
 							<div class="card-work-block__text">Attracts traffic to the advertiser's website. If users make a purchase, the webmaster receives a reward</div>
 						</div>
 						<div class="work-block__card card-work-block">
-							<div class="card-work-block__image">
+							<div class="card-work-block__image card-work-block__image--advertiser">
 								<img src="img/advertiser/work/02.webp" alt="Image">
 							</div>
 							<div class="card-work-block__step">Step 2: AspidPartners</div>
 							<div class="card-work-block__text">AspidPartners provides its platform, connecting advertisers and webmasters. It monitors traffic quality and pays rewards</div>
 						</div>
 						<div class="work-block__card card-work-block">
-							<div class="card-work-block__image">
+							<div class="card-work-block__image card-work-block__image--advertiser">
 								<img src="img/advertiser/work/03.webp" alt="Image">
 							</div>
 							<div class="card-work-block__step">Step 3: Advertiser</div>
@@ -608,7 +604,7 @@
 								<div class="content-clients-block__text">You just need to find one network that will do it for you.</div>
 							</div>
 							<div class="content-clients-block__actions">
-								<a href="#" class="content-clients-block__button button button--working">Get an Account</a>
+								<a href="registration-1.html" class="content-clients-block__button button button--working">Get an Account</a>
 							</div>
 						</div>
 					</div>
@@ -640,16 +636,16 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">E-commerce</a>
+									<a href="../e-commerce.html" class="spollers-footer__link">E-commerce</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Lead Generation</a>
+									<a href="../lead-generation.html" class="spollers-footer__link">Lead Generation</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Company</a>
+									<a href="../company.html" class="spollers-footer__link">Company</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Blog</a>
+									<a href="../blog.html" class="spollers-footer__link">Blog</a>
 								</li>
 							</ul>
 						</div>
@@ -659,10 +655,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Loyalty program</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Loyalty program</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">PayPerCall</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">PayPerCall</a>
 								</li>
 							</ul>
 						</div>
@@ -672,10 +668,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Publisher Terms and Conditions</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Publisher Terms and Conditions</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Privacy Policy</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Privacy Policy</a>
 								</li>
 							</ul>
 						</div>
@@ -684,7 +680,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250328212200"></script>
+	<script src="js/app.min.js?_v=20250331001140"></script>
 </body>
 
 </html>
