--- a/aspidpartners/affiliate.html
+++ b/aspidpartners/affiliate.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331001140">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,62 +22,62 @@
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Advertiser</a>
+								<a href="../advertiser.html" class="menu__link _icon-arrow-down">Advertiser</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Advertiser</a>
+											<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Affiliate</a>
+								<a href="../affiliate.html" class="menu__link _icon-arrow-down">Affiliate</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Affiliate</a>
+											<a class="sub-menu__link" href="#">PayPerCall</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">E-commerce</a>
+								<a href="../e-commerce.html" class="menu__link">E-commerce</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Lead Generation</a>
+								<a href="../lead-generation.html" class="menu__link">Lead Generation</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Company </a>
+								<a href="../company.html" class="menu__link">Company</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Blog </a>
+								<a href="../blog.html" class="menu__link">Blog</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">FAQ</a>
+								<a href="../faq.html" class="menu__link">FAQ</a>
 							</li>
 						</ul>
 					</nav>
 				</div>
 				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--login">Log In</a>
+						<a href="../login.html" class="actions-header__button button button--login">Log In</a>
 						<div class="actions-header__sub-menu actions-header__sub-menu--login sub-menu sub-menu--login">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
 									<a class="sub-menu__link" href="#">CPA Network</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Affiliate</a>
+									<a class="sub-menu__link" href="../affiliate.html">Affiliate</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Advertiser</a>
+									<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--sign-up">Sign Up</a>
+						<a href="../login.html" class="actions-header__button button button--sign-up">Sign Up</a>
 						<div class="actions-header__sub-menu sub-menu">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
@@ -102,10 +102,10 @@
 								<nav class="menu-breadcrumb__body">
 									<ul class="menu-breadcrumb__list">
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Home</a>
+											<a href="home.html" class="menu-breadcrumb__link active">Home</a>
 										</li>
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Advertisers</a>
+											<a href="affiliate.html" class="menu-breadcrumb__link active">Affiliate</a>
 										</li>
 									</ul>
 								</nav>
@@ -174,8 +174,8 @@
 							<div class="top-block__labels labels">
 								<div class="labels__label label label--active">Why they work with us</div>
 							</div>
-							<h2 class="top-block__title">Advantages AspidPartners</h2>
-							<div class="top-block__text">We collaborate with the largest advertisers in digital marketing. Most importantly, you will only pay for verified results</div>
+							<h2 class="top-block__title">Advantages of AspidPartners</h2>
+							<div class="top-block__text top-block__text--affiliate">AspidPartners offers extensive offers worldwide across verticals such as Social Networking, LeadGen, Installs, Mobile Billing, and Nutra</div>
 							<div class="top-block__actions">
 								<a href="#" class="top-block__button button button--working">Start Working</a>
 							</div>
@@ -184,37 +184,39 @@
 							<div class="advantages__card card-advantages">
 								<div class="card-advantages__item">
 									<div class="card-advantages__number">01</div>
-									<div class="card-advantages__text">Sweepstakes, Social Networking, LeadGen, Installs, Mobile Billing, and Nutra</div>
+									<div class="card-advantages__text">Thousands of direct, internal, and exclusive offers from reliable advertisers
+									</div>
 								</div>
 							</div>
 							<div class="advantages__card card-advantages">
 								<div class="card-advantages__item">
 									<div class="card-advantages__number">02</div>
-									<div class="card-advantages__text">An in-house team of media buyers specializing in Push, Social, and Native sources</div>
+									<div class="card-advantages__text">A team of experienced managers always ready
+										to help</div>
 								</div>
 							</div>
 							<div class="advantages__card card-advantages">
 								<div class="card-advantages__item">
 									<div class="card-advantages__number">03</div>
-									<div class="card-advantages__text">A dedicated client manager ready to meet your KPIs with suitable traffic</div>
+									<div class="card-advantages__text">Timely payments without deductions and customizable payment cycles for high-volume partners</div>
 								</div>
 							</div>
 							<div class="advantages__card card-advantages">
 								<div class="card-advantages__item">
 									<div class="card-advantages__number">04</div>
-									<div class="card-advantages__text">Global traffic from top publishers with multiple traffic types</div>
+									<div class="card-advantages__text">Custom exclusive landing page creation and integration of requested offers</div>
 								</div>
 							</div>
 							<div class="advantages__card card-advantages">
 								<div class="card-advantages__item">
 									<div class="card-advantages__number">05</div>
-									<div class="card-advantages__text">Automated anti-fraud system and regular manual traffic checks</div>
+									<div class="card-advantages__text">Detailed reporting and analytics from experienced managers</div>
 								</div>
 							</div>
 							<div class="advantages__card card-advantages">
 								<div class="card-advantages__item">
 									<div class="card-advantages__number">06</div>
-									<div class="card-advantages__text">Comprehensive campaign oversight, from creatives to lead generation</div>
+									<div class="card-advantages__text">Detailed reporting and analytics from experienced managers</div>
 								</div>
 							</div>
 						</div>
@@ -352,7 +354,7 @@
 								<h2 class="content-clients-block__title">Find out the true value of your traffic!</h2>
 							</div>
 							<div class="content-clients-block__actions">
-								<a href="#" class="content-clients-block__button button button--working">Get an Account</a>
+								<a href="registration-1.html" class="content-clients-block__button button button--working">Get an Account</a>
 							</div>
 						</div>
 					</div>
@@ -384,16 +386,16 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">E-commerce</a>
+									<a href="../e-commerce.html" class="spollers-footer__link">E-commerce</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Lead Generation</a>
+									<a href="../lead-generation.html" class="spollers-footer__link">Lead Generation</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Company</a>
+									<a href="../company.html" class="spollers-footer__link">Company</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Blog</a>
+									<a href="../blog.html" class="spollers-footer__link">Blog</a>
 								</li>
 							</ul>
 						</div>
@@ -403,10 +405,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Loyalty program</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Loyalty program</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">PayPerCall</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">PayPerCall</a>
 								</li>
 							</ul>
 						</div>
@@ -416,10 +418,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Publisher Terms and Conditions</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Publisher Terms and Conditions</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Privacy Policy</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Privacy Policy</a>
 								</li>
 							</ul>
 						</div>
@@ -428,7 +430,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250328212200"></script>
+	<script src="js/app.min.js?_v=20250331001140"></script>
 </body>
 
 </html>
