--- a/aspidpartners/e-commerce.html
+++ b/aspidpartners/e-commerce.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331001140">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,62 +22,62 @@
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Advertiser</a>
+								<a href="../advertiser.html" class="menu__link _icon-arrow-down">Advertiser</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Advertiser</a>
+											<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Affiliate</a>
+								<a href="../affiliate.html" class="menu__link _icon-arrow-down">Affiliate</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Affiliate</a>
+											<a class="sub-menu__link" href="#">PayPerCall</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">E-commerce</a>
+								<a href="../e-commerce.html" class="menu__link">E-commerce</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Lead Generation</a>
+								<a href="../lead-generation.html" class="menu__link">Lead Generation</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Company </a>
+								<a href="../company.html" class="menu__link">Company</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Blog </a>
+								<a href="../blog.html" class="menu__link">Blog</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">FAQ</a>
+								<a href="../faq.html" class="menu__link">FAQ</a>
 							</li>
 						</ul>
 					</nav>
 				</div>
 				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--login">Log In</a>
+						<a href="../login.html" class="actions-header__button button button--login">Log In</a>
 						<div class="actions-header__sub-menu actions-header__sub-menu--login sub-menu sub-menu--login">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
 									<a class="sub-menu__link" href="#">CPA Network</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Affiliate</a>
+									<a class="sub-menu__link" href="../affiliate.html">Affiliate</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Advertiser</a>
+									<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--sign-up">Sign Up</a>
+						<a href="../login.html" class="actions-header__button button button--sign-up">Sign Up</a>
 						<div class="actions-header__sub-menu sub-menu">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
@@ -102,10 +102,10 @@
 								<nav class="menu-breadcrumb__body">
 									<ul class="menu-breadcrumb__list">
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Home</a>
+											<a href="home.html" class="menu-breadcrumb__link active">Home</a>
 										</li>
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Advertisers</a>
+											<a href="e-commerce.html" class="menu-breadcrumb__link active">E-commerce</a>
 										</li>
 									</ul>
 								</nav>
@@ -168,13 +168,13 @@
 								<div class="tabs__body">
 									<div class="tabs__items">
 										<div class="tabs__column column-tabs">
-											<div class="column-tabs__item">Internal traffic quality control and brand safety tools</div>
-											<div class="column-tabs__item">Fast and easy platform integration (S2S postback, API)</div>
-											<div class="column-tabs__item">Comprehensive multi-channel advertising in over 180 GEOs</div>
-											<div class="column-tabs__item">500+ premium publishers</div>
-											<div class="column-tabs__item">Detailed performance reports</div>
-											<div class="column-tabs__item">Network-exclusive placements</div>
-											<div class="column-tabs__item">No fees for sellers</div>
+											<div class="column-tabs__item">Competitive commission rates</div>
+											<div class="column-tabs__item">Quick account verification process</div>
+											<div class="column-tabs__item">Over 1500 partner brands with exclusive offers</div>
+											<div class="column-tabs__item">Exclusive offers for third-party marketing tools</div>
+											<div class="column-tabs__item">Bonuses and loyalty programs based on performance</div>
+											<div class="column-tabs__item">Exclusive internal tools for ad creation and campaign optimization</div>
+											<div class="column-tabs__item">Flexible payment terms</div>
 										</div>
 										<div class="tabs__image">
 											<img src="img/e-commerce/advertisers/smart.webp" alt="Image">
@@ -193,78 +193,112 @@
 					</div>
 				</div>
 				<div class="categories__items categories-block">
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/affiliate/categories/home.webp" alt="Image">
+					<!-- Оболонка слайдера -->
+					<div class="categories-block__slider swiper">
+						<!-- Частина слайдера, що рухається -->
+						<div class="categories-block__wrapper swiper-wrapper">
+							<!-- Слайд -->
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/affiliate/categories/home.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Home Improvement</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/pets.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Pets</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/electronics.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Electronics</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/beauty.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Beauty</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/travel.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Travel</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/affiliate/categories/services.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Legal Services</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/affiliate/categories/home.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Home Improvement</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/pets.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Pets</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/electronics.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Electronics</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/beauty.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Beauty</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/e-commerce/categories/travel.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Travel</div>
+								</a>
+							</div>
+							<div class="categories-block__slide swiper-slide">
+								<a href="#" class="categories-block__link">
+									<div class="categories-block__image">
+										<img src="img/affiliate/categories/services.webp" alt="Image">
+									</div>
+									<div class="categories-block__title">Legal Services</div>
+								</a>
+							</div>
 						</div>
-						<div class="categories-block__title">Home Improvement</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/pets.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Pets</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/electronics.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Electronics</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/beauty.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Beauty</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/travel.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Travel</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/affiliate/categories/services.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Legal Services</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/affiliate/categories/home.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Home Improvement</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/pets.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Pets</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/electronics.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Electronics</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/beauty.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Beauty</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/e-commerce/categories/travel.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Travel</div>
-					</a>
-					<a href="#" class="categories-block__link">
-						<div class="categories-block__image">
-							<img src="img/affiliate/categories/services.webp" alt="Image">
-						</div>
-						<div class="categories-block__title">Legal Services</div>
-					</a>
+						<!-- Якщо потрібна навігація (ліворуч/праворуч) -->
+						<button type="button" class="swiper-button-prev"></button>
+						<button type="button" class="swiper-button-next"></button>
+					</div>
 				</div>
 			</section>
 			<section class="page__get-started get-started">
@@ -303,7 +337,7 @@
 							</div>
 						</div>
 						<div class="get-started__actions actions-get-started">
-							<a href="#" class="actions-get-started__button button button--working">Affiliate Sign Up</a>
+							<a href="registration.html" class="actions-get-started__button button button--working">Affiliate Sign Up</a>
 						</div>
 					</div>
 				</div>
@@ -334,16 +368,16 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">E-commerce</a>
+									<a href="../e-commerce.html" class="spollers-footer__link">E-commerce</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Lead Generation</a>
+									<a href="../lead-generation.html" class="spollers-footer__link">Lead Generation</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Company</a>
+									<a href="../company.html" class="spollers-footer__link">Company</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Blog</a>
+									<a href="../blog.html" class="spollers-footer__link">Blog</a>
 								</li>
 							</ul>
 						</div>
@@ -353,10 +387,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Loyalty program</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Loyalty program</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">PayPerCall</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">PayPerCall</a>
 								</li>
 							</ul>
 						</div>
@@ -366,10 +400,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Publisher Terms and Conditions</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Publisher Terms and Conditions</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Privacy Policy</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Privacy Policy</a>
 								</li>
 							</ul>
 						</div>
@@ -378,7 +412,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250328212200"></script>
+	<script src="js/app.min.js?_v=20250331001140"></script>
 </body>
 
 </html>
