--- a/aspidpartners/lead-generation.html
+++ b/aspidpartners/lead-generation.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250328212200">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331001140">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,62 +22,62 @@
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Advertiser</a>
+								<a href="../advertiser.html" class="menu__link _icon-arrow-down">Advertiser</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Advertiser</a>
+											<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link _icon-arrow-down">Affiliate</a>
+								<a href="../affiliate.html" class="menu__link _icon-arrow-down">Affiliate</a>
 								<div class="menu__sub-menu sub-menu">
 									<ul class="sub-menu__list">
 										<li class="sub-menu__item">
-											<a class="sub-menu__link" href="#">Affiliate</a>
+											<a class="sub-menu__link" href="#">PayPerCall</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">E-commerce</a>
+								<a href="../e-commerce.html" class="menu__link">E-commerce</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Lead Generation</a>
+								<a href="../lead-generation.html" class="menu__link">Lead Generation</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Company </a>
+								<a href="../company.html" class="menu__link">Company</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">Blog </a>
+								<a href="../blog.html" class="menu__link">Blog</a>
 							</li>
 							<li class="menu__item">
-								<a href="#" class="menu__link">FAQ</a>
+								<a href="../faq.html" class="menu__link">FAQ</a>
 							</li>
 						</ul>
 					</nav>
 				</div>
 				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--login">Log In</a>
+						<a href="../login.html" class="actions-header__button button button--login">Log In</a>
 						<div class="actions-header__sub-menu actions-header__sub-menu--login sub-menu sub-menu--login">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
 									<a class="sub-menu__link" href="#">CPA Network</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Affiliate</a>
+									<a class="sub-menu__link" href="../affiliate.html">Affiliate</a>
 								</li>
 								<li class="sub-menu__item">
-									<a class="sub-menu__link" href="#">Advertiser</a>
+									<a class="sub-menu__link" href="../advertiser.html">Advertiser</a>
 								</li>
 							</ul>
 						</div>
 					</div>
 					<div class="actions-header__item">
-						<a href="#" class="actions-header__button button button--sign-up">Sign Up</a>
+						<a href="../login.html" class="actions-header__button button button--sign-up">Sign Up</a>
 						<div class="actions-header__sub-menu sub-menu">
 							<ul class="sub-menu__list">
 								<li class="sub-menu__item">
@@ -102,10 +102,10 @@
 								<nav class="menu-breadcrumb__body">
 									<ul class="menu-breadcrumb__list">
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Home</a>
+											<a href="home.html" class="menu-breadcrumb__link active">Home</a>
 										</li>
 										<li class="menu-breadcrumb__item">
-											<a href="#" class="menu-breadcrumb__link active">Advertisers</a>
+											<a href="lead-generation.html" class="menu-breadcrumb__link active">Lead-generation</a>
 										</li>
 									</ul>
 								</nav>
@@ -116,8 +116,8 @@
 							Create quality leads and scale your business with AspidPartners.
 						</div>
 						<div class="section-block__actions actions-section-block">
-							<a href="#" class="actions-section-block__button button button--hero">Register advertiser</a>
-							<a href="#" class="actions-section-block__button button button--hero-white">Register AFFILIATE</a>
+							<a href="registration-1.html" class="actions-section-block__button button button--hero">Register advertiser</a>
+							<a href="registration.html" class="actions-section-block__button button button--hero-white">Register AFFILIATE</a>
 						</div>
 					</div>
 				</div>
@@ -440,9 +440,8 @@
 									<div class="form-contact-us__select">
 										<select name="form[]" data-class-modif="form">
 											<option value="1" selected>ADVERTISER</option>
-											<option value="2">ADVERTISER</option>
-											<option value="3">ADVERTISER</option>
-											<option value="4">ADVERTISER</option>
+											<option value="2">AFFILIATE</option>
+											<option value="3">Job Seeker</option>
 										</select>
 									</div>
 								</div>
@@ -489,16 +488,16 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">E-commerce</a>
+									<a href="../e-commerce.html" class="spollers-footer__link">E-commerce</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Lead Generation</a>
+									<a href="../lead-generation.html" class="spollers-footer__link">Lead Generation</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Company</a>
+									<a href="../company.html" class="spollers-footer__link">Company</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Blog</a>
+									<a href="../blog.html" class="spollers-footer__link">Blog</a>
 								</li>
 							</ul>
 						</div>
@@ -508,10 +507,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Loyalty program</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Loyalty program</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">PayPerCall</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">PayPerCall</a>
 								</li>
 							</ul>
 						</div>
@@ -521,10 +520,10 @@
 						<div class="spollers-footer__body">
 							<ul class="spollers-footer__list">
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Publisher Terms and Conditions</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Publisher Terms and Conditions</a>
 								</li>
 								<li class="spollers-footer__item">
-									<a href="#" class="spollers-footer__link">Privacy Policy</a>
+									<a href="#" class="spollers-footer__link spollers-footer__link--color">Privacy Policy</a>
 								</li>
 							</ul>
 						</div>
@@ -533,7 +532,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250328212200"></script>
+	<script src="js/app.min.js?_v=20250331001140"></script>
 </body>
 
 </html>
