--- a/aspidpartners/company.html
+++ b/aspidpartners/company.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250331083914">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250331125903">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,13 +58,6 @@
 							</li>
 						</ul>
 					</nav>
-					<div data-da=".menu__body, 767.98" class="menu__select">
-						<select name="form[]" data-class-modif="form">
-							<option value="1" selected>EN</option>
-							<option value="2">UA</option>
-							<option value="3">中文</option>
-						</select>
-					</div>
 				</div>
 				<div data-da=".menu__body, 767.98" class="header__actions actions-header">
 					<div class="actions-header__item">
@@ -218,105 +211,144 @@
 					</div>
 				</div>
 				<div class="partners__body">
-					<div class="partners__row partners__row--1">
-						<div class="partners__image">
-							<img src="img/home/partners/temu.webp" alt="Image">
+					<!-- Оболонка слайдера -->
+					<div class="partners__slider swiper">
+						<!-- Частина слайдера, що рухається -->
+						<div class="partners__wrapper swiper-wrapper">
+							<!-- Слайд -->
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/morrisons.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/poopeys.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/morrisons.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/poopeys.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
 						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/walmart.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/morrisons.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/poopeys.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/temu.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/walmart.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/morrisons.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/poopeys.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/temu.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/walmart.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/morrisons.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/poopeys.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/temu.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/walmart.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/morrisons.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/poopeys.webp" alt="Image">
-						</div>
+						<!-- Якщо потрібна навігація (ліворуч/праворуч) -->
+						<button type="button" class="swiper-button-prev"></button>
+						<button type="button" class="swiper-button-next"></button>
 					</div>
-					<div class="partners__row partners__row--2">
-						<div class="partners__image">
-							<img src="img/home/partners/tesco.webp" alt="Image">
+					<div class="partners__slider-1 swiper">
+						<!-- Частина слайдера, що рухається -->
+						<div class="partners__wrapper swiper-wrapper">
+							<!-- Слайд -->
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/morrisons.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/poopeys.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/morrisons.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/poopeys.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/temu.webp" alt="Image">
+								</div>
+							</div>
+							<div class="partners__slide swiper-slide">
+								<div class="partners__image">
+									<img src="img/home/partners/walmart.webp" alt="Image">
+								</div>
+							</div>
 						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/morrisons.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/aliexpress.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/tesco.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/walmart.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/poopeys.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/tesco.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/morrisons.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/aliexpress.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/tesco.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/walmart.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/poopeys.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/aliexpress.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/tesco.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/walmart.webp" alt="Image">
-						</div>
-						<div class="partners__image">
-							<img src="img/home/partners/poopeys.webp" alt="Image">
-						</div>
+						<!-- Якщо потрібна навігація (ліворуч/праворуч) -->
+						<button type="button" class="swiper-button-prev"></button>
+						<button type="button" class="swiper-button-next"></button>
 					</div>
 				</div>
 				<div class="partners__actions actions-partners">
@@ -393,7 +425,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250331083914"></script>
+	<script src="js/app.min.js?_v=20250331125903"></script>
 </body>
 
 </html>
